
release.xml:
----------------------
* New targets "deploy-server" and "kill-server" for starting/killing the binary release on a testing port.
* Added "web" tests for the binary distribution. They are executed by the "webtest" target in release.xml.
* Exclude pre-built binaries from source distribution and rename zip to include "src" in the name (CC-336). 

build loop
======================

AntBootstrapper:
----------------------
* No longer extends AntBuilder, but delegates to an AntBuilder instance. AntBootstrapper previously could have been used as a builder and a bootstrapper, but this wasn't semantically correct. It also made it more difficult to look at the class signature and understand its responsibilities.

AntBuilder:
----------------------
* Fails with an explicit error message if the ant log is empty instead of a XML parse Error on line -1: Premature end of file. Patch by Jerome Lacoste.
* Warn that jvmargs are ignored when specifing anthome

main/build.xml:
----------------------
* Allow build for jdk 1.3 no matter which jdk is being used. Patch by Brad Clarke. 

ClearCase:
----------------------
* New 'all' attribute can be used to increase performance when checking the entire view. Patch by Rick Reimer.

configxml.html:
----------------------
* Included link to timebuild in modificationset documentation.

config.xml:
----------------------
* Allow preconfiguration of <log ..> element and sub-elements. Patch by Jerome Lacoste.
* Allow preconfiguration of project and subelements (CC-352). Patch by Jerome Lacoste.

ConcurrentVersionsSystem.java:
----------------------
* Fixed bug when module attribute is set to a true CVS module, not just a directory. Patch by Brad Clarke.

CVS.java:
----------------------