@@ -47,6 +47,7 @@ import org.jdom.Element;
 import net.sourceforge.cruisecontrol.CruiseControlException;
 import net.sourceforge.cruisecontrol.Publisher;
 import net.sourceforge.cruisecontrol.builders.AntBuilder;
+import net.sourceforge.cruisecontrol.builders.Property;
 import net.sourceforge.cruisecontrol.util.XMLLogHelper;
 
 /**
@@ -58,9 +59,11 @@ import net.sourceforge.cruisecontrol.util.XMLLogHelper;
  * 
  * @author <a href="mailto:rjmpsmith@hotmail.com">Robert J. Smith </a>
  */
-public class AntPublisher extends AntBuilder implements Publisher {
+public class AntPublisher implements Publisher {
     
     private static final Logger LOG = Logger.getLogger(AntPublisher.class);
+
+    private AntBuilder delegate = new AntBuilder();
     
     /* (non-Javadoc)
      * @see net.sourceforge.cruisecontrol.Publisher#publish(org.jdom.Element)
@@ -72,7 +75,7 @@ public class AntPublisher extends AntBuilder implements Publisher {
         populatePropertesForAntBuilder(log, properties);
         
         // Run Ant
-        Element result = build(properties);
+        Element result = delegate.build(properties);
         if (result == null) {
             LOG.error("Publisher failed.\n\n");
         } else {
@@ -85,6 +88,115 @@ public class AntPublisher extends AntBuilder implements Publisher {
                         + "\n");
             }         
         }
+    }
+
+    public void validate() throws CruiseControlException {
+        delegate.validate();
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setSaveLogDir(String)
+     */
+    public void setSaveLogDir(String dir) {
+        delegate.setSaveLogDir(dir);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setAntWorkingDir(String)
+     */
+    public void setAntWorkingDir(String dir) {
+        delegate.setAntWorkingDir(dir);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setAntScript(String)
+     */
+    public void setAntScript(String antScript) {
+        delegate.setAntScript(antScript);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setAntHome(String)
+     */
+    public void setAntHome(String antHome) {
+        delegate.setAntHome(antHome);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setTempFile(String)
+     */
+    public void setTempFile(String tempFileName) {
+        delegate.setTempFile(tempFileName);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setTarget(String)
+     */
+    public void setTarget(String target) {
+        delegate.setTarget(target);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setBuildFile(String)
+     */
+    public void setBuildFile(String buildFile) {
+        delegate.setBuildFile(buildFile);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setUseLogger(boolean)
+     */
+    public void setUseLogger(boolean useLogger) {
+        delegate.setUseLogger(useLogger);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#createJVMArg()
+     */
+    public Object createJVMArg() {
+        return delegate.createJVMArg();
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#createProperty()
+     */
+    public Property createProperty() {
+        return delegate.createProperty();
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setUseDebug(boolean)
+     */
+    public void setUseDebug(boolean debug) {
+        delegate.setUseDebug(debug);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setUseQuiet(boolean)
+     */
+    public void setUseQuiet(boolean quiet) {
+        delegate.setUseQuiet(quiet);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#getLoggerClassName()
+     */
+    public String getLoggerClassName() {
+        return delegate.getLoggerClassName();
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setLoggerClassName(String)
+     */
+    public void setLoggerClassName(String string) {
+        delegate.setLoggerClassName(string);
+    }
+
+    /**
+     * @see net.sourceforge.cruisecontrol.builders.AntBuilder#setTimeout(long)
+     */
+    public void setTimeout(long timeout) {
+        delegate.setTimeout(timeout);
     }
 
     void populatePropertesForAntBuilder(Element log, Map properties) {
